@@ -498,6 +498,8 @@ select:disabled, input:disabled, textarea:disabled {
 .asm-overduerow { font-style: italic; color: #ff0000; }
 .asm-warningrow { color: #ff0000; }
 #tableform-select-all { position: absolute; margin-top: 8px; margin-left: 5px; z-index: 1; }
+#tableform-toggle-filter { position: absolute; margin-top: 8px; margin-left: 20px; z-index: 1; }
+#tableform-select-all:hover, #tableform-toggle-filter:hover { opacity: 0.7; }
 
 /** WAITING LIST ==================== */
 .asm-wl-highlight { color: #000; background-color: #fff284; }
