@@ -1,6 +1,7 @@
 45
 ================
 
+09/12/21 Clickable icon in table header to show filter line #1073
 09/12/21 OOO token for animal codes (animals in month) #1071
 07/12/21 Fix regression with last movement duplicating staff rota people
 06/12/21 Fix regression with JQuery 1.13 and rearranging lists
